--- a/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
@@ -57,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformed Data:\n",
-      "     MedInc  HouseAge      AveRooms\n",
-      "0  2.344766       0.0  6.285345e-01\n",
-      "1  2.332238       0.0  3.270125e-01\n",
-      "2  1.782699       0.0  1.155602e+00\n",
-      "3  0.932968       0.0  3.589932e-16\n",
-      "4 -0.012881       0.0  3.589932e-16\n"
+      "Transformed numerical columns:\n",
+      "    ID     Price  Avg ratings  Total ratings  Delivery time\n",
+      "0  0.0 -0.209783     1.150256      -0.144689       0.352164\n",
+      "1  0.0 -0.209783     0.687001      -0.144689       0.142249\n",
+      "2  0.0  1.305849     1.150256      -0.144689      -0.277581\n",
+      "3  0.0 -0.426302     0.378165       0.877217       0.212220\n",
+      "4  0.0  0.006736     0.532583      -0.272427       0.632050\n"
      ]
     }
    ],
@@ -81,18 +81,19 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "# Step 1: Load sample dataset\n",
-    "data = fetch_california_housing(as_frame=True)\n",
-    "df = data.frame\n",
+    "# Step 1: Load the dataset\n",
+    "df = pd.read_csv(\"swiggy.csv\")\n",
     "\n",
-    "# Step 2: Simulate missing values\n",
-    "df.loc[0:5, 'HouseAge'] = np.nan\n",
-    "df.loc[3:8, 'AveRooms'] = np.nan\n",
+    "# Step 2: Automatically detect numerical columns\n",
+    "numerical_cols = df.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
     "\n",
-    "# Step 3: Define numerical columns for transformation\n",
-    "numerical_cols = ['MedInc', 'HouseAge', 'AveRooms']\n",
+    "# Step 3: Handle case where no numerical columns found\n",
+    "if not numerical_cols:\n",
+    "    raise ValueError(\"No numerical columns found in the dataset!\")\n",
+    "\n",
+    "# Optional: Simulate missing values for demo\n",
+    "df.loc[0:5, numerical_cols[0]] = np.nan  # Add missing values to first numeric column\n",
     "\n",
     "# Step 4: Define pipeline for imputation and scaling\n",
     "numeric_transformer = Pipeline(steps=[\n",
@@ -105,11 +106,12 @@
     "    ('num', numeric_transformer, numerical_cols)\n",
     "])\n",
     "\n",
-    "# Step 6: Apply the transformation pipeline\n",
-    "df[numerical_cols] = preprocessor.fit_transform(df[numerical_cols])\n",
+    "# Step 6: Apply transformations and create a new DataFrame\n",
+    "df_transformed = preprocessor.fit_transform(df[numerical_cols])\n",
+    "df[numerical_cols] = pd.DataFrame(df_transformed, columns=numerical_cols)\n",
     "\n",
-    "# Step 7: Verify the result\n",
-    "print(\"Transformed Data:\")\n",
+    "# Step 7: View the transformed data\n",
+    "print(\"Transformed numerical columns:\")\n",
     "print(df[numerical_cols].head())\n"
    ]
   }
