--- a/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
@@ -22,17 +22,187 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting streamlit\n",
+      "  Downloading streamlit-1.45.1-py3-none-any.whl (9.9 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/9.9 MB\u001b[0m \u001b[31m17.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: altair<6,>=4.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (4.2.2)\n",
+      "Collecting pyarrow>=7.0\n",
+      "  Downloading pyarrow-20.0.0-cp310-cp310-manylinux_2_28_x86_64.whl (42.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.3/42.3 MB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: tornado<7,>=6.0.3 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (6.4.2)\n",
+      "Collecting tenacity<10,>=8.1.0\n",
+      "  Downloading tenacity-9.1.2-py3-none-any.whl (28 kB)\n",
+      "Collecting gitpython!=3.1.19,<4,>=3.0.7\n",
+      "  Downloading GitPython-3.1.44-py3-none-any.whl (207 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.6/207.6 kB\u001b[0m \u001b[31m30.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting cachetools<6,>=4.0\n",
+      "  Downloading cachetools-5.5.2-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: blinker<2,>=1.5.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (1.9.0)\n",
+      "Collecting packaging<25,>=20\n",
+      "  Downloading packaging-24.2-py3-none-any.whl (65 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.5/65.5 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests<3,>=2.27 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (2.32.3)\n",
+      "Requirement already satisfied: pillow<12,>=7.1.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (11.2.1)\n",
+      "Collecting protobuf<7,>=3.20\n",
+      "  Downloading protobuf-6.31.0-cp39-abi3-manylinux2014_x86_64.whl (320 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m320.9/320.9 kB\u001b[0m \u001b[31m38.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting toml<2,>=0.10.1\n",
+      "  Downloading toml-0.10.2-py2.py3-none-any.whl (16 kB)\n",
+      "Collecting watchdog<7,>=2.1.5\n",
+      "  Downloading watchdog-6.0.0-py3-none-manylinux2014_x86_64.whl (79 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.1/79.1 kB\u001b[0m \u001b[31m16.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting pydeck<1,>=0.8.0b4\n",
+      "  Downloading pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m38.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hRequirement already satisfied: click<9,>=7.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (8.2.1)\n",
+      "Requirement already satisfied: pandas<3,>=1.4.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (2.1.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.4.0 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (4.13.2)\n",
+      "Requirement already satisfied: numpy<3,>=1.23 in /home/vscode/.local/lib/python3.10/site-packages (from streamlit) (1.26.4)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /home/vscode/.local/lib/python3.10/site-packages (from altair<6,>=4.0->streamlit) (4.23.0)\n",
+      "Requirement already satisfied: entrypoints in /home/vscode/.local/lib/python3.10/site-packages (from altair<6,>=4.0->streamlit) (0.4)\n",
+      "Requirement already satisfied: toolz in /home/vscode/.local/lib/python3.10/site-packages (from altair<6,>=4.0->streamlit) (1.0.0)\n",
+      "Requirement already satisfied: jinja2 in /home/vscode/.local/lib/python3.10/site-packages (from altair<6,>=4.0->streamlit) (3.1.6)\n",
+      "Collecting gitdb<5,>=4.0.1\n",
+      "  Downloading gitdb-4.0.12-py3-none-any.whl (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.8/62.8 kB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: tzdata>=2022.1 in /home/vscode/.local/lib/python3.10/site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/vscode/.local/lib/python3.10/site-packages (from pandas<3,>=1.4.0->streamlit) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/vscode/.local/lib/python3.10/site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.27->streamlit) (3.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.27->streamlit) (2025.4.26)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.27->streamlit) (2.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.27->streamlit) (3.4.2)\n",
+      "Collecting smmap<6,>=3.0.1\n",
+      "  Downloading smmap-5.0.2-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/vscode/.local/lib/python3.10/site-packages (from jinja2->altair<6,>=4.0->streamlit) (3.0.2)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /home/vscode/.local/lib/python3.10/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.36.2)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in /home/vscode/.local/lib/python3.10/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (25.3.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /home/vscode/.local/lib/python3.10/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (2025.4.1)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /home/vscode/.local/lib/python3.10/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.25.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/vscode/.local/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
+      "Installing collected packages: watchdog, toml, tenacity, smmap, pyarrow, protobuf, packaging, cachetools, pydeck, gitdb, gitpython, streamlit\n",
+      "  Attempting uninstall: packaging\n",
+      "    Found existing installation: packaging 25.0\n",
+      "    Uninstalling packaging-25.0:\n",
+      "      Successfully uninstalled packaging-25.0\n",
+      "Successfully installed cachetools-5.5.2 gitdb-4.0.12 gitpython-3.1.44 packaging-24.2 protobuf-6.31.0 pyarrow-20.0.0 pydeck-0.9.1 smmap-5.0.2 streamlit-1.45.1 tenacity-9.1.2 toml-0.10.2 watchdog-6.0.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install streamlit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-22 04:44:26.331 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.653 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run /home/vscode/.local/lib/python3.10/site-packages/ipykernel_launcher.py [ARGUMENTS]\n",
+      "2025-05-22 04:44:26.655 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.655 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.656 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.657 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.658 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.658 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.659 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-22 04:44:26.660 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "st.title(\"Data Quality Dashboard\")\n",
+    "\n",
+    "# Step 1: File uploader for CSV\n",
+    "uploaded_file = st.file_uploader(\"Upload your CSV file\", type=[\"csv\"])\n",
+    "\n",
+    "if uploaded_file is not None:\n",
+    "    # Step 2: Read CSV\n",
+    "    df = pd.read_csv(uploaded_file)\n",
+    "    \n",
+    "    st.subheader(\"Raw Data\")\n",
+    "    st.dataframe(df)\n",
+    "\n",
+    "    # Step 3: Calculate missing values and DQI\n",
+    "    total_rows = len(df)\n",
+    "    missing_counts = df.isna().sum()\n",
+    "    dqi_per_column = 1 - (missing_counts / total_rows)\n",
+    "    overall_dqi = dqi_per_column.mean()\n",
+    "    \n",
+    "    st.subheader(\"Data Quality Metrics\")\n",
+    "    st.write(f\"**Overall Data Quality Index (DQI):** {overall_dqi:.4f}\")\n",
+    "    \n",
+    "    # Show missing counts and DQI per column in a table\n",
+    "    metrics_df = pd.DataFrame({\n",
+    "        \"Missing Values\": missing_counts,\n",
+    "        \"DQI\": dqi_per_column\n",
+    "    })\n",
+    "    st.dataframe(metrics_df)\n",
+    "    \n",
+    "    # Step 4: Visualize with bar plot + line plot for missing values\n",
+    "    fig, ax1 = plt.subplots(figsize=(10, 5))\n",
+    "    \n",
+    "    dqi_per_column.plot(kind='bar', color='skyblue', ax=ax1)\n",
+    "    ax1.set_ylabel('DQI (1 - Missing Ratio)')\n",
+    "    ax1.set_ylim(0, 1.05)\n",
+    "    ax1.set_title('Data Quality Index (DQI) and Missing Values per Column')\n",
+    "    \n",
+    "    ax2 = ax1.twinx()\n",
+    "    missing_counts.plot(kind='line', color='red', marker='o', linewidth=2, ax=ax2)\n",
+    "    ax2.set_ylabel('Number of Missing Values')\n",
+    "    ax2.set_ylim(0, missing_counts.max() + 5)\n",
+    "    \n",
+    "    st.pyplot(fig)\n",
+    "else:\n",
+    "    st.info(\"Please upload a CSV file to get started.\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
