--- a/src/Module 8/Automating Data Quality Measurement/Ques_1.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_1.ipynb
@@ -31,99 +31,55 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting ydata-profiling\n",
-      "  Downloading ydata_profiling-4.16.1-py2.py3-none-any.whl (400 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m400.1/400.1 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pandas!=1.4.0,<3.0,>1.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (2.1.4)\n",
+      "Requirement already satisfied: ydata-profiling in /home/vscode/.local/lib/python3.10/site-packages (4.16.1)\n",
       "Requirement already satisfied: scipy<1.16,>=1.4.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (1.15.3)\n",
-      "Collecting phik<0.13,>=0.11.1\n",
-      "  Downloading phik-0.12.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (686 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m686.1/686.1 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting dacite>=1.8\n",
-      "  Downloading dacite-1.9.2-py3-none-any.whl (16 kB)\n",
-      "Collecting wordcloud>=1.9.3\n",
-      "  Downloading wordcloud-1.9.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (511 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m511.1/511.1 kB\u001b[0m \u001b[31m27.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting typeguard<5,>=3\n",
-      "  Downloading typeguard-4.4.2-py3-none-any.whl (35 kB)\n",
-      "Collecting imagehash==4.3.1\n",
-      "  Downloading ImageHash-4.3.1-py2.py3-none-any.whl (296 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m296.5/296.5 kB\u001b[0m \u001b[31m28.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: jinja2<3.2,>=2.11.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (3.1.6)\n",
-      "Collecting multimethod<2,>=1.4\n",
-      "  Downloading multimethod-1.12-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: seaborn<0.14,>=0.10.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.13.2)\n",
+      "Requirement already satisfied: typeguard<5,>=3 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (4.4.2)\n",
       "Requirement already satisfied: requests<3,>=2.24.0 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (2.32.3)\n",
-      "Collecting matplotlib<=3.10,>=3.5\n",
-      "  Downloading matplotlib-3.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (8.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.6/8.6 MB\u001b[0m \u001b[31m26.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting PyYAML<6.1,>=5.0.0\n",
-      "  Downloading PyYAML-6.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (751 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m751.2/751.2 kB\u001b[0m \u001b[31m46.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting numba<=0.61,>=0.56.0\n",
-      "  Downloading numba-0.61.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (3.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.8/3.8 MB\u001b[0m \u001b[31m47.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting statsmodels<1,>=0.13.2\n",
-      "  Downloading statsmodels-0.14.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.8/10.8 MB\u001b[0m \u001b[31m33.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0mm\n",
-      "\u001b[?25hRequirement already satisfied: tqdm<5,>=4.48.2 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (4.67.1)\n",
+      "Requirement already satisfied: dacite>=1.8 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (1.9.2)\n",
+      "Requirement already satisfied: statsmodels<1,>=0.13.2 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.14.4)\n",
+      "Requirement already satisfied: imagehash==4.3.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (4.3.1)\n",
+      "Requirement already satisfied: jinja2<3.2,>=2.11.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (3.1.6)\n",
+      "Requirement already satisfied: numba<=0.61,>=0.56.0 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.61.0)\n",
+      "Requirement already satisfied: phik<0.13,>=0.11.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.12.4)\n",
+      "Requirement already satisfied: htmlmin==0.1.12 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.1.12)\n",
+      "Requirement already satisfied: multimethod<2,>=1.4 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (1.12)\n",
+      "Requirement already satisfied: wordcloud>=1.9.3 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (1.9.4)\n",
       "Requirement already satisfied: pydantic>=2 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (2.11.4)\n",
-      "Collecting htmlmin==0.1.12\n",
-      "  Downloading htmlmin-0.1.12.tar.gz (19 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting visions[type_image_path]<0.8.2,>=0.7.5\n",
-      "  Downloading visions-0.8.1-py3-none-any.whl (105 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.4/105.4 kB\u001b[0m \u001b[31m20.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: seaborn<0.14,>=0.10.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.13.2)\n",
+      "Requirement already satisfied: tqdm<5,>=4.48.2 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (4.67.1)\n",
+      "Requirement already satisfied: pandas!=1.4.0,<3.0,>1.1 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (2.1.4)\n",
       "Requirement already satisfied: numpy<2.2,>=1.16.0 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (1.26.4)\n",
+      "Requirement already satisfied: matplotlib<=3.10,>=3.5 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (3.10.0)\n",
+      "Requirement already satisfied: PyYAML<6.1,>=5.0.0 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (6.0.2)\n",
+      "Requirement already satisfied: visions[type_image_path]<0.8.2,>=0.7.5 in /home/vscode/.local/lib/python3.10/site-packages (from ydata-profiling) (0.8.1)\n",
+      "Requirement already satisfied: PyWavelets in /home/vscode/.local/lib/python3.10/site-packages (from imagehash==4.3.1->ydata-profiling) (1.8.0)\n",
       "Requirement already satisfied: pillow in /home/vscode/.local/lib/python3.10/site-packages (from imagehash==4.3.1->ydata-profiling) (11.2.1)\n",
-      "Collecting PyWavelets\n",
-      "  Downloading pywavelets-1.8.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: MarkupSafe>=2.0 in /home/vscode/.local/lib/python3.10/site-packages (from jinja2<3.2,>=2.11.1->ydata-profiling) (3.0.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (3.2.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (1.4.8)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (4.58.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/vscode/.local/lib/python3.10/site-packages (from jinja2<3.2,>=2.11.1->ydata-profiling) (3.0.2)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (1.3.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (4.58.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (3.2.3)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (0.12.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (2.9.0.post0)\n",
       "Requirement already satisfied: packaging>=20.0 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (24.2)\n",
-      "Collecting llvmlite<0.45,>=0.44.0dev0\n",
-      "  Downloading llvmlite-0.44.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (42.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.4/42.4 MB\u001b[0m \u001b[31m11.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pytz>=2020.1 in /home/vscode/.local/lib/python3.10/site-packages (from pandas!=1.4.0,<3.0,>1.1->ydata-profiling) (2025.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (1.4.8)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/vscode/.local/lib/python3.10/site-packages (from matplotlib<=3.10,>=3.5->ydata-profiling) (2.9.0.post0)\n",
+      "Requirement already satisfied: llvmlite<0.45,>=0.44.0dev0 in /home/vscode/.local/lib/python3.10/site-packages (from numba<=0.61,>=0.56.0->ydata-profiling) (0.44.0)\n",
       "Requirement already satisfied: tzdata>=2022.1 in /home/vscode/.local/lib/python3.10/site-packages (from pandas!=1.4.0,<3.0,>1.1->ydata-profiling) (2025.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/vscode/.local/lib/python3.10/site-packages (from pandas!=1.4.0,<3.0,>1.1->ydata-profiling) (2025.2)\n",
       "Requirement already satisfied: joblib>=0.14.1 in /home/vscode/.local/lib/python3.10/site-packages (from phik<0.13,>=0.11.1->ydata-profiling) (1.5.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.12.2 in /home/vscode/.local/lib/python3.10/site-packages (from pydantic>=2->ydata-profiling) (4.13.2)\n",
       "Requirement already satisfied: pydantic-core==2.33.2 in /home/vscode/.local/lib/python3.10/site-packages (from pydantic>=2->ydata-profiling) (2.33.2)\n",
       "Requirement already satisfied: typing-inspection>=0.4.0 in /home/vscode/.local/lib/python3.10/site-packages (from pydantic>=2->ydata-profiling) (0.4.0)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /home/vscode/.local/lib/python3.10/site-packages (from pydantic>=2->ydata-profiling) (0.7.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (2.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (3.10)\n",
+      "Requirement already satisfied: typing-extensions>=4.12.2 in /home/vscode/.local/lib/python3.10/site-packages (from pydantic>=2->ydata-profiling) (4.13.2)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (3.4.2)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (2025.4.26)\n",
-      "Collecting patsy>=0.5.6\n",
-      "  Downloading patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m232.9/232.9 kB\u001b[0m \u001b[31m22.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h\u001b[33mWARNING: visions 0.8.1 does not provide the extra 'type_image_path'\u001b[0m\u001b[33m\n",
-      "\u001b[0mCollecting networkx>=2.4\n",
-      "  Downloading networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m50.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: attrs>=19.3.0 in /home/vscode/.local/lib/python3.10/site-packages (from visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling) (25.3.0)\n",
-      "Collecting puremagic\n",
-      "  Downloading puremagic-1.29-py3-none-any.whl (43 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.3/43.3 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /home/vscode/.local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib<=3.10,>=3.5->ydata-profiling) (1.17.0)\n",
-      "Building wheels for collected packages: htmlmin\n",
-      "  Building wheel for htmlmin (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for htmlmin: filename=htmlmin-0.1.12-py3-none-any.whl size=27081 sha256=b4a0c4b450206f99aadcabaa9ef6a0aacba6895a55f3cc6624e94b21a160b0aa\n",
-      "  Stored in directory: /home/vscode/.cache/pip/wheels/dd/91/29/a79cecb328d01739e64017b6fb9a1ab9d8cb1853098ec5966d\n",
-      "Successfully built htmlmin\n",
-      "Installing collected packages: puremagic, htmlmin, typeguard, PyYAML, PyWavelets, patsy, networkx, multimethod, llvmlite, dacite, numba, matplotlib, imagehash, wordcloud, visions, statsmodels, phik, ydata-profiling\n",
-      "  Attempting uninstall: matplotlib\n",
-      "    Found existing installation: matplotlib 3.10.3\n",
-      "    Uninstalling matplotlib-3.10.3:\n",
-      "      Successfully uninstalled matplotlib-3.10.3\n",
-      "Successfully installed PyWavelets-1.8.0 PyYAML-6.0.2 dacite-1.9.2 htmlmin-0.1.12 imagehash-4.3.1 llvmlite-0.44.0 matplotlib-3.10.0 multimethod-1.12 networkx-3.4.2 numba-0.61.0 patsy-1.0.1 phik-0.12.4 puremagic-1.29 statsmodels-0.14.4 typeguard-4.4.2 visions-0.8.1 wordcloud-1.9.4 ydata-profiling-4.16.1\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.10/site-packages (from requests<3,>=2.24.0->ydata-profiling) (2.4.0)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in /home/vscode/.local/lib/python3.10/site-packages (from statsmodels<1,>=0.13.2->ydata-profiling) (1.0.1)\n",
+      "\u001b[33mWARNING: visions 0.8.1 does not provide the extra 'type_image_path'\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: attrs>=19.3.0 in /home/vscode/.local/lib/python3.10/site-packages (from visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling) (25.3.0)\n",
+      "Requirement already satisfied: networkx>=2.4 in /home/vscode/.local/lib/python3.10/site-packages (from visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling) (3.4.2)\n",
+      "Requirement already satisfied: puremagic in /home/vscode/.local/lib/python3.10/site-packages (from visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling) (1.29)\n",
+      "Requirement already satisfied: six>=1.5 in /home/vscode/.local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib<=3.10,>=3.5->ydata-profiling) (1.17.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
