--- a/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(interval_seconds)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Run monitoring simulation\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[43mmonitor_data_quality\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[5], line 12\u001b[0m, in \u001b[0;36mmonitor_data_quality\u001b[0;34m(interval_seconds, iterations)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(iterations):\n\u001b[1;32m     11\u001b[0m     data \u001b[38;5;241m=\u001b[39m simulate_real_time_data()\n\u001b[0;32m---> 12\u001b[0m     ge_df \u001b[38;5;241m=\u001b[39m \u001b[43mge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m(data)\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# Validate using our custom expectation\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m ge_df\u001b[38;5;241m.\u001b[39mexpect_column_values_to_be_non_negative_income(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[6], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(interval_seconds)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Run monitoring simulation\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[43mmonitor_data_quality\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[6], line 12\u001b[0m, in \u001b[0;36mmonitor_data_quality\u001b[0;34m(interval_seconds, iterations)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(iterations):\n\u001b[1;32m     11\u001b[0m     data \u001b[38;5;241m=\u001b[39m simulate_real_time_data()\n\u001b[0;32m---> 12\u001b[0m     ge_df \u001b[38;5;241m=\u001b[39m \u001b[43mge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m(data)\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# Validate using our custom expectation\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m ge_df\u001b[38;5;241m.\u001b[39mexpect_column_values_to_be_non_negative_income(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'great_expectations' has no attribute 'from_pandas'"
      ]
     }
@@ -180,7 +180,7 @@
     "        # Validate using our custom expectation\n",
     "        result = ge_df.expect_column_values_to_be_non_negative_income(\"income\")\n",
     "        \n",
-    "        print(f\"Iteration {i+1}: {data.to_dict(orient='records')[0]}\")\n",
+    "        print(f\"iteration {i+1}: {data.to_dict(orient='records')[0]}\")\n",
     "        alert_if_quality_drop(result)\n",
     "        \n",
     "        time.sleep(interval_seconds)\n",
